--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="container my-5">
             <div class="row justify-content-between text-center text-md-left">
                 <div data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="col-md-6">
-                    <h2 class="font-weight-bold"></h2>
+                    <h2 class="font-weight-bold">hiiiii</h2>
                     <p class="my-4">
                         <br> </p>
 
