--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <br></p>
                     
                 </div>
-                <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 align-self-center">
+                 align-self-center">
                                    </div>
             </div>
         </div>
