--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="jumbotron jumbotron-fluid feature" id="feature-last">
         <div class="container">
             <div class="row justify-content-between text-center text-md-left">
-                <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
+           -last">
                     <h2 class="font-weight-bold"></h2>
                     <p class="my-4">
                         
